# reinforcement-learning-lab

./: .gitignore  breakout.ipynb  main.ipynb  pyproject.toml  self_driving_car.ipynb
training/logs/A2C_1/: events.out.tfevents.1768118049.LAPTOP-TJA46EQK.14720.0
training/logs/DQN_1/: events.out.tfevents.1768077904.LAPTOP-TJA46EQK.22092.3
training/logs/PPO_1/: events.out.tfevents.1768072969.LAPTOP-TJA46EQK.22092.0
training/logs/PPO_2/: events.out.tfevents.1768077457.LAPTOP-TJA46EQK.22092.1
training/logs/PPO_3/: events.out.tfevents.1768077791.LAPTOP-TJA46EQK.22092.2
training/logs/PPO_4/: events.out.tfevents.1768124465.LAPTOP-TJA46EQK.20076.0
