[project]
name = "reinforcement-learning-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.11.2",
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium[atari,box2d]>=1.2.3",
    "jupyter>=1.1.1",
    "pyglet>=2.1.12",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
]
